@@ -1,3 +1,12 @@
+2006-01-18  Nick Clifton  <nickc@redhat.com>
+
+	PR binutils/1391
+	* objcopy.c (copy_object): For PE format targets set the VMA of a
+	newly created gnu_debuglink section to a non-zero, aligned,
+	contiguous value.
+	* Makefile.am (objcopy.c): Add a dependency upon libbfd.h.
+	* Makefile.in: Regenerate.
+
 2006-01-17  Andreas Schwab  <schwab@suse.de>
 
 	PR binutils/1486
